--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@
   
                     <div class="d-flex align-items-center justify-content-center pb-4">
                       <p class="mb-0 me-2">Don't have an account?</p>
-                      <button type="button" class="btn btn-outline-primary">Create new</button>
+                      <button type="button" class="btn btn-outline-primary" routerLink="/signup">Create new</button>
                     </div>
   
                   </form>
