--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -9,14 +9,6 @@
                   <div class="p-5">
                     <h3 class="fw-normal mb-5" style="color: #4835d4;">General Infomation</h3>
   
-                    <div class="mb-4 pb-2">
-                      <select class="select">
-                        <option value="1">Title</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                      </select>
-                    </div>
   
                     <div class="row">
                       <div class="col-md-6 mb-4 pb-2">
@@ -39,38 +31,34 @@
   
                     <div class="mb-4 pb-2">
                       <select class="select">
-                        <option value="1">Position</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
+                        <option value="1">Gender</option>
+                        <option value="2">Male</option>
+                        <option value="3">Female</option>
                       </select>
                     </div>
   
-                    <div class="mb-4 pb-2">
+                    <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
                       <div class="form-outline">
-                        <input type="text" id="form3Examplev4" class="form-control form-control-lg" />
-                        <label class="form-label" for="form3Examplev4">Position</label>
+                        <input type="number" min="0" max="100" id="form3Examplev4" class="form-control form-control-lg" />
+                        <label class="form-label" for="form3Examplev4">Age</label>
                       </div>
                     </div>
   
                     <div class="row">
                       <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
-  
                         <div class="form-outline">
                           <input type="text" id="form3Examplev5" class="form-control form-control-lg" />
-                          <label class="form-label" for="form3Examplev5">Bussines Arena</label>
+                          <label class="form-label" for="form3Examplev5">Password</label>
                         </div>
-  
                       </div>
-                      <div class="col-md-6">
-  
-                        <select class="select">
-                          <option value="1">Employees</option>
-                          <option value="2">Two</option>
-                          <option value="3">Three</option>
-                          <option value="4">Four</option>
-                        </select>
-  
+                    </div>
+
+                    <div class="row">
+                      <div class="col-md-6 mb-4 pb-2 mb-md-0 pb-md-0">
+                        <div class="form-outline">
+                          <input type="text" id="form3Examplev5" class="form-control form-control-lg" />
+                          <label class="form-label" for="form3Examplev5">Confirm Password</label>
+                        </div>
                       </div>
                     </div>
   
@@ -79,20 +67,6 @@
                 <div class="col-lg-6 bg-indigo text-white">
                   <div class="p-5">
                     <h3 class="fw-normal mb-5">Contact Details</h3>
-  
-                    <div class="mb-4 pb-2">
-                      <div class="form-outline form-white">
-                        <input type="text" id="form3Examplea2" class="form-control form-control-lg" />
-                        <label class="form-label" for="form3Examplea2">Street + Nr</label>
-                      </div>
-                    </div>
-  
-                    <div class="mb-4 pb-2">
-                      <div class="form-outline form-white">
-                        <input type="text" id="form3Examplea3" class="form-control form-control-lg" />
-                        <label class="form-label" for="form3Examplea3">Additional Information</label>
-                      </div>
-                    </div>
   
                     <div class="row">
                       <div class="col-md-5 mb-4 pb-2">
@@ -124,8 +98,8 @@
                       <div class="col-md-5 mb-4 pb-2">
   
                         <div class="form-outline form-white">
-                          <input type="text" id="form3Examplea7" class="form-control form-control-lg" />
-                          <label class="form-label" for="form3Examplea7">Code +</label>
+                          <input type="text" id="form3Examplea7" class="form-control form-control-lg" placeholder="+"/>
+                          <label class="form-label" for="form3Examplea7">Country Code</label>
                         </div>
   
                       </div>
